--- a/css/main.less
+++ b/css/main.less
@@ -264,6 +264,12 @@
     position: relative;
     overflow: hidden;
 
+    	.about-img{
+    		-webkit-transition: all 0.3s ease-in;
+				-moz-transition: all 0.3s ease-in;
+			        transition: all 0.3s ease-in;
+    	}
+
     	&:hover .visible-menu{
 			opacity:1;
  			transition-delay: 0s;
@@ -272,6 +278,12 @@
 			opacity: 1;
  			transform: scale(1);
  			transition-delay: 0.1s;
+		}
+		&:hover .about-img{
+			 transform: scale(1.3);
+		    -webkit-transform: scale(1.3);
+		    -o-transform: scale(1.3);
+		    -moz-transform: scale(1.3);
 		}
 		
 }
@@ -823,4 +835,33 @@
 	vertical-align: middle;
 }
 
+#navigator{
+	position: fixed;
+	top: 50%;
+   right: 48px;
+   z-index: 999;
 
+   	a{
+   		display:block;
+   		padding: 6px;
+   		background: rgba(255,255,255,0.01);
+   	}
+   	 .bullet {
+		    width: 12px;
+		    height: 12px;
+		    display:block;
+		    border-radius: 50%;
+		    border: 2px solid white;
+		    -moz-transition: background-color,border-color 0.1s ease-in-out;
+		    -webkit-transition: background-color,border-color 0.1s ease-in-out;
+		    transition: background-color,border-color 0.1s ease-in-out;
+		    cursor: pointer;
+		}
+
+}
+.nav-item.active .bullet{
+	background: white;
+   border-color: transparent;
+   border-color: rgba(255,255,255,0.01);
+   cursor: default;
+}
