--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 }
 .header {
   height: 100%;
-  background: url(../images/header.jpg) center 0 no-repeat fixed;
+  background: url(../images/header2.jpg) center 0 no-repeat fixed;
   background-size: cover;
   text-align: center;
 }
@@ -33,6 +33,8 @@
   width: 100%;
   height: 100%;
   display: table;
+  background: url(../images/overlay.png) no-repeat 50%;
+  background-size: cover;
 }
 .header-title img {
   max-width: 100%;
@@ -91,6 +93,19 @@
 .about-rest .about-img {
   width: 100%;
   height: auto;
+  -webkit-transition: all 0.4s ease-in;
+  -moz-transition: all 0.4s ease-in;
+  transition: all 0.4s ease-in;
+}
+.about-rest .col-sm-4 a {
+  display: block;
+  overflow: hidden;
+}
+.about-rest .col-sm-4 a:hover .about-img {
+  transform: scale(1.3);
+  -webkit-transform: scale(1.3);
+  -o-transform: scale(1.3);
+  -moz-transform: scale(1.3);
 }
 .about-rest .small-title {
   font-size: 18px;
@@ -197,6 +212,7 @@
 .rest-list a {
   color: black;
   text-decoration: none !important;
+  cursor: pointer;
 }
 .rest-list a:hover,
 .rest-list a.active {
@@ -782,4 +798,45 @@
 }
 .midnightHeader.black .nav-item.active .bullet {
   background: black !important;
+}
+#video1 {
+  width: 100%;
+}
+.btn-video {
+  border: 0;
+  outline: 0;
+  position: absolute;
+  left: 50%;
+  margin-top: -62.5px;
+  margin-left: -62.5px;
+  top: 50%;
+  z-index: 4;
+  background-color: transparent;
+}
+.video2 {
+  position: relative;
+}
+.video2 video {
+  display: block;
+}
+.overlay-video {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  background: rgba(0, 0, 0, 0.47);
+}
+.overlay-video p {
+  margin: 0px;
+  text-transform: uppercase;
+  text-align: center;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  font-size: 34px;
+}
+.header-overlay {
+  display: inline-block;
 }
