--- a/css/main.less
+++ b/css/main.less
@@ -12,7 +12,7 @@
 
 .header{
 	height: 100%;
-	background: url(../images/header.jpg)center 0 no-repeat fixed;
+	background: url(../images/header2.jpg)center 0 no-repeat fixed;
 	background-size: cover;
 	text-align: center;
 
@@ -39,6 +39,8 @@
 	width: 100%;
 	height: 100%;
 	display: table;
+	background: url(../images/overlay.png)no-repeat 50%;
+	background-size: cover;
 
 		img{
 			max-width: 100%;
@@ -106,7 +108,23 @@
 		.about-img{
 			width: 100%;
 			height: auto;
+			-webkit-transition: all 0.4s ease-in;
+   			-moz-transition: all 0.4s ease-in;
+    				  transition: all 0.4s ease-in;
 		}
+
+		.col-sm-4 a{
+			display: block;
+			overflow: hidden;
+
+				&:hover .about-img{
+					transform: scale(1.3);
+		    		-webkit-transform: scale(1.3);
+		    		-o-transform: scale(1.3);
+		    		-moz-transform: scale(1.3);
+				}
+		}
+
 		.small-title{
 			font-size: 18px;
 		}
@@ -227,6 +245,7 @@
 		a{
 			color: #000000;
 			text-decoration: none !important;
+			cursor: pointer;
 
 				&:hover,
 				&.active{
@@ -881,3 +900,46 @@
 .midnightHeader.black .nav-item.active .bullet{
 	background:black !important;
 } 
+#video1{
+	width:100%;
+}
+.btn-video{
+	border:0;
+	outline:0;
+	position: absolute;
+	left:50%;
+	margin-top: -62.5px;
+	margin-left: -62.5px;
+	top:50%;
+	z-index: 4;
+	background-color: transparent;
+}
+.video2{
+	position: relative;
+
+		video{
+			display:block;
+		}
+}
+.overlay-video{
+	position: absolute;
+	left:0;
+	top: 0;
+	width: 100%;
+	height:100%;
+	z-index: 3;
+	background: rgba(0,0,0,0.47);
+
+		p{
+		 margin: 0px;
+	    text-transform: uppercase;
+	    text-align: center;
+	    color: #FFF;
+	    font-family: "Roboto",sans-serif;
+	    font-weight: 600;
+	    font-size: 34px;
+		}
+}
+.header-overlay{
+	display: inline-block;
+}
