--- a/css/main.less
+++ b/css/main.less
@@ -943,3 +943,14 @@
 .header-overlay{
 	display: inline-block;
 }
+
+.child-res{
+	padding-left: 25px;
+
+		a{
+			color: #fff;
+		}
+}
+.rest-link > a{
+	cursor: pointer;
+}
