--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3569,7 +3569,8 @@ tbody.collapse.in {
 .dropdown-toggle:focus {
   outline: 0;
 }
-.dropdown-menu {
+.dropdown-menu,
+.res-menu {
   position: absolute;
   top: 110%;
   left: 0;
@@ -3588,6 +3589,7 @@ tbody.collapse.in {
   right: 0;
   left: auto;
 }
+
 .dropdown-menu .divider {
   height: 1px;
   margin: 9px 0;
